--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,6 +108,22 @@ li {
     height: auto;
     font-size: 20px;
 }
+.type {
+    height: 15%;
+    width: 10%;
+    background-color: rgba(43, 196, 107, 0.425);
+    margin: 10px;
+    padding: 4px;
+    border: black;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 10%;
+    cursor: pointer;
+}
+.type:hover {
+    background-color: white;
+    color: rgba(43, 196, 107, 0.425);
+  }
 .label {
     background-color: inherit;
     font-size: 5px;
