--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,9 @@
 * {
     font-family: Gluten;
-    /* background-color: rgb(48, 109, 124); */
     color: rgb(34, 31, 51);
 }
 body {
     background-image: url("/img/3062895.jpg");
-    /* background-image: url("/img/5451975.jpg"); */
     background-size: cover;
 }
 img {
@@ -73,7 +71,6 @@ h1 > img {
     align-items: center;
     font-size: 20px;
     width: 50%;
-    height: 30%;
     margin-left: 25%;
     margin-right: 25%;
     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
@@ -88,8 +85,8 @@ li {
 }
 #pokemonImg{
     background-color: transparent;
-    width: 200px;
-    height: 200px;
+    width: 50%;
+    height: 150px;
 }
 .name, .height, .weight {
     border-style: solid;
@@ -109,9 +106,8 @@ li {
     font-size: 20px;
 }
 .type {
-    height: 15%;
-    width: 10%;
-    background-color: rgba(43, 196, 107, 0.425);
+    height: auto;
+    width: auto;
     margin: 10px;
     padding: 4px;
     border: black;
@@ -123,12 +119,35 @@ li {
 .type:hover {
     background-color: white;
     color: rgba(43, 196, 107, 0.425);
-  }
+}
 .label {
     background-color: inherit;
     font-size: 5px;
 }
-
+/*DROPDOWM NAMES LIST*/
+.dropDown {
+    list-style: none;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    height: 20%;
+    width: 20%;
+    overflow: scroll;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropDown li {
+    border-top-style: solid;
+    border-top: grey;
+    border-top-width: 2px;
+}
+.dropDown li:hover {
+    background-color: #ddd;
+    color: red;
+}
+.show {
+    display: inline-block;
+}
 /*MOVE BUTTONS*/
 .move-btn {
     height: 10%;
