# README change + bug fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
     color: rgb(34, 31, 51);
 }
 body {
-    background-image: url("/3062895.jpg");
+    background-image: url("https://i.pinimg.com/originals/26/b5/55/26b5551ba10f013a335e91b98f530d51.png");
     background-size: cover;
 }
 img {
