--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,8 @@ h1 > img {
 }
 /*SEARCH AREA*/
 #searchInputName, #searchInputId, #userName {
-    width: 40%;
-    font-size: 20px;
+    width: 30%;
+    font-size: 15px;
     text-align: center;
 }
 #search-name-btn,  #search-id-btn{
@@ -58,6 +58,24 @@ h1 > img {
       transform: rotate(360deg);
     }
   }
+
+/*POKEMON COLLECTION*/
+.collection {
+    background-color: rgba(172, 45, 45, 0.5);
+    border-style: solid;
+    border-width: 5px;
+    border-color: rgba(0,0,0,0.5);
+    margin: 5px;
+    width: fit-content;
+    height: 10%;
+    overflow-y: auto;
+}
+.poke-list {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+}
 
 /*POKEMON CARD*/
 .pokemon-card {
