--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,7 +76,24 @@ h1 > img {
     flex-direction: row;
     width: fit-content;
 }
-
+.pokeName {
+    background-color: brown;
+    color: whitesmoke;
+    font-size: 20px;
+    height: auto;
+    width: auto;
+    margin: 10px;
+    padding: 4px;
+    border: black;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 10%;
+    cursor: pointer;
+}
+.pokeName:hover {
+    background-color:whitesmoke ;
+    color: brown;
+}
 /*POKEMON CARD*/
 .pokemon-card {
     list-style: none;
